syntax = "proto3";

package heyrenee.v1;

option go_package = "github.com/HeyReneeInc/proto/golang/heyrenee/v1";

import "heyrenee/v1/messages/patient_diagnosis.proto";
import "heyrenee/v1/options/auth.proto";

// DiagnosisService
//
// The DiagnosisService provides operations on Diagnosis resources along with managing PatientDiagnoses which represent
// relationships between Patient users and Diagnoses.
//
// URLs
//  Scratch: heyrenee-v1-8jiz6fu6.uc.gateway.dev
service DiagnosisService {
  // DiagnosisSuggest returns a list of DiagnosisSuggestions based on a partial search string. This should only be
  // used for autocomplete like features and not as a full fledged Diagnosis search method.
  //
  // TODO(mitch): Use bi-directional streaming once client streaming supported by grpc-web
  // https://github.com/grpc/grpc-web/issues/24
  rpc DiagnosisSuggest(DiagnosisSuggestRequest) returns (DiagnosisSuggestResponse) {}

  // CreatePatientDiagnosis creates a specified PatientDiagnosis.
  rpc CreatePatientDiagnosis(CreatePatientDiagnosisRequest) returns (heyrenee.v1.messages.PatientDiagnosis) {}
  // UpdatePatientDiagnosis creates a specified PatientDiagnosis.
  rpc UpdatePatientDiagnosis(UpdatePatientDiagnosisRequest) returns (heyrenee.v1.messages.PatientDiagnosis) {}
  // ListPatientDiagnoses lists the PatientDiagnoses for a specified Patient.
  rpc ListPatientDiagnoses(ListPatientDiagnosesRequest) returns (ListPatientDiagnosesResponse) {}
}

// Request message for DiagnosisSuggest.
message DiagnosisSuggestRequest {
  // The partial text be used to generate DiagnosisSuggestions. Required.
  string partial_text = 1;
}

// Response message for DiagnosisSuggest.
message DiagnosisSuggestResponse {
  // The list of DiagnosisSuggestions.
  repeated DiagnosisSuggestion diagnosis_suggestions = 1;
}

// A DiagnosisSuggestion represents a single Diagnosis suggested as an autocompletion result for the partial text in a
// DiagnosisSuggestRequest.
message DiagnosisSuggestion {
  // The ID of the suggested Diagnosis.
  string diagnosis_id = 1;
  // The name of the Diagnosis that should be displayed to the user in the list of suggestions.
  string display_name = 2;
}

// Request message for CreatePatientDiagnosis.
message CreatePatientDiagnosisRequest {
  // The PatientDiagnosis to create. Required.
  heyrenee.v1.messages.PatientDiagnosis patient_diagnosis = 1;
}

// Request message for UpdatePatientDiagnosis.
message UpdatePatientDiagnosisRequest {
  // The PatientDiagnosis to update. Required.
  heyrenee.v1.messages.PatientDiagnosis patient_diagnosis = 1;
}

// Request message for ListPatientDiagnoses.
message ListPatientDiagnosesRequest {
  // The ID of the Patient to return Appointments for. Required.
  string patient_id = 1 [(heyrenee.v1.options.field_authorization) = FIELD_AUTHORIZATION_PATIENT];
  // The status of the PatientDiagnoses. If specified, only PatientDiagnoses with the specified status will be returned.
  heyrenee.v1.messages.PatientDiagnosisStatus patient_diagnosis_status = 2;
}

// Response message for ListPatientDiagnoses.
message ListPatientDiagnosesResponse {
  // The list of PatientDiagnoses.
  repeated heyrenee.v1.messages.PatientDiagnosis patient_diagnoses = 1;
}
